[package]
name = "hello-ra4m1"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = { version = "0.7", features = [ "device" ]  }
panic-halt = "0.2"
ra4m1-fsp-pac = { version = "0.1.10", features = [ "critical-section", "cortex-m-rt-device" ] }
scopeguard = { version = "1.2.0", default-features = false }
